chg: [API] Added deletion of users via the API.
