# docs/_static/openapi.yml
@@ -142,6 +142,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
           description: ''
+  /api/v1/User/{id}:
+    delete:
+      operationId: User_destroy
+      description: Delete a user.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+      tags:
+      - User
+      security:
+      - cookieAuth: []
+      - basicAuth: []
+      responses:
+        '204':
+          description: No response body
   /api/v1/schema/:
     get:
       operationId: schema_retrieve
